fix: video overflow (#30)

--- a/styles/video.scss
+++ b/styles/video.scss
@@ -4,4 +4,5 @@
   align-items: center;
   justify-content: center;
   max-width: 100vw;
+  overflow: hidden;
 }
